--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -21,9 +21,9 @@
                <table id="tablaArticulos" class="table table-striped table-bordered" style="width:100%">
                <thead>
                  <tr>
-                    <th>Temperatura</th>
-                    <th>Humedad</th>                                
-                    <th>Fecha y hora </th> 
+                    <th>Temp °C</th>
+                    <th>Hume %</th>                                
+                    <th>Fecha</th> 
                     <th>Hora</th>                        
                 </tr>
                </thead>
